git inut